# FREE-FALL_detector

./: CMakeLists.txt  README.md  requirements.md
src/: FFdetector.cpp  FFdetector.h  IMU.h  SocketServer.cpp  SocketServer.h  main.cpp
